send mail report to all admin daily and add log application